crates/lang/tests/ui/contract/fail/message-self-receiver-missing.stderr
error: ink! messages must have `&self` or `&mut self` receiver
  --> tests/ui/contract/fail/message-self-receiver-missing.rs:14:9
   |
14 |         #[ink(message)]
   |         ^
